Add check for xextproto in configure.ac
drmmode_display.c already tries to check if the xext proto is 7.1 or above to include the correct header,
but until now the used constant was not checked/defined during configure at all.
Add the configure part is based on what xf86-video-modesetting does.

Change-Id: I1a37cb258f9f137731b083aeb2f3e572dc8977a2

--- a/configure.ac
+++ b/configure.ac
@@ -82,6 +82,11 @@ PKG_CHECK_MODULES(XORG,
                   pixman-1
                   $REQUIRED_MODULES)
 
+PKG_CHECK_MODULES(XEXT, [xextproto >= 7.0.99.1],
+	HAVE_XEXTPROTO_71="yes"; AC_DEFINE(HAVE_XEXTPROTO_71, 1, [xextproto 7.1 available]),
+	HAVE_XEXTPROTO_71="no")
+AM_CONDITIONAL(HAVE_XEXTPROTO_71, [ test "$HAVE_XEXTPROTO_71" = "yes"])
+
 # Checks for header files.
 AC_HEADER_STDC
 
