[change] to xlnx_drv from armsoc_drv

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -40,11 +40,7 @@ armsoc_drv_la_LTLIBRARIES = armsoc_drv.la
 armsoc_drv_la_LDFLAGS = -module -avoid-version -no-undefined
 armsoc_drv_la_LIBADD = @XORG_LIBS@
 armsoc_drv_ladir = @moduledir@/drivers
-DRMMODE_SRCS = drmmode_exynos/drmmode_exynos.c \
-	drmmode_pl111/drmmode_pl111.c \
-	drmmode_kirin/drmmode_kirin.c \
-	drmmode_sti/drmmode_sti.c \
-	drmmode_xilinx/drmmode_xilinx.c
+DRMMODE_SRCS = drmmode_xilinx/drmmode_xilinx.c
 
 
 armsoc_drv_la_SOURCES = \
