--- a/debian/control
+++ b/debian/control
@@ -14,11 +14,11 @@ Build-Depends: debhelper (>= 9),
                quilt,
                dh-autoreconf
 
-Package: xserver-xorg-video-armsoc-xilinx
+Package: xserver-xorg-video-xlnx
 Architecture: armhf arm64
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          xserver-xorg-core
 Provides: ${xviddriver:Provides}
-Description: X.Org X Server -- ARM SoC display driver for rockchip, amlogic, sunxi and Xilinx(ZynqMP) DRM (mainline kernel)
+Description: X.Org X Server -- ARM SoC display driver for Xilinx(ZynqMP) DRM (mainline kernel)
 
